--- a/src/login-modal.css
+++ b/src/login-modal.css
@@ -123,7 +123,24 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+
 }
+/* Overlay */
+.app-modal .ant-modal-mask {
+  position: fixed !important;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.45);
+}
+
+/* Contenedor centrado */
+.app-modal .ant-modal-wrap {
+  position: fixed !important;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 .app-modal .ant-modal-content {
   border-radius: 2px;
