--- a/src/login-modal.css
+++ b/src/login-modal.css
@@ -176,49 +176,34 @@
   padding: 20px;
 }
 
-/* CONTENEDOR */
 .forget-password-form {
   text-align: right !important;
   font-family: "Montserrat" !important;
-
-  .actions {
-    gap: 10px !important;
-
-    .app-cancel {
-      height: 32px !important;
-      padding: 6px 16px !important;
-      border-radius: 2px !important;
-      font-size: 14px !important;
-      width: auto !important;
-      box-shadow: none !important;
-      text-align: right !important;
-      font-family: "Montserrat" !important;
-    }
-  }
 }
 
+.forget-password-form .actions {
+  gap: 10px !important;
+  display: flex !important;
+  justify-content: flex-end !important;
+}
+
+/* Cancelar */
 .forget-password-form .actions .app-cancel {
+  background: var(--secondary-client-color-login-modal) !important;
+  color: var(--primary-client-color-login-modal) !important;
+}
+
+/* Enviar */
+.forget-password-form .actions .app-button {
+  background: var(--primary-client-color-login-modal) !important;
+  color: var(--secondary-client-color-login-modal) !important;
+}
+
+/* Botones */
+.forget-password-form .actions .ant-btn {
   height: 32px !important;
   padding: 6px 16px !important;
   border-radius: 2px !important;
   font-size: 14px !important;
-  width: auto !important;
-  box-shadow: none !important;
-  text-align: right !important;
   font-family: "Montserrat" !important;
-
-}
-
-/* Cancelar */
-.forget-password-form .actions .app-cancel.ant-btn {
-  background: #fff !important;
-  border: 1px solid #d9d9d9 !important;
-  color: #262626 !important;
-}
-
-/* Enviar */
-.forget-password-form .actions .app-cancel.ant-btn {
-  background: var(--primary-client-color-login-modal) !important;
-  border-color: var(--primary-client-color-login-modal) !important;
-  color: #fff !important;
 }
