--- a/src/login-modal.css
+++ b/src/login-modal.css
@@ -159,8 +159,9 @@
   }
 }
 
+
 .app-modal .ant-modal-header {
-  border-bottom: 1px solid #f0f0f0;
+  border-bottom: 1px solid #000000;
 }
 
 .app-modal.no-header-boreder .ant-modal-header {
